[24569] Remove deprecated elements (#586)